# zed

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
components/libs/zed_sdk/: Cargo.toml
components/libs/zed_sdk_sys/: Cargo.toml
components/sources/cu_zed/: Cargo.toml  README.md  justfile
components/sources/cu_zed/examples/: zed_rerun_demo.rs
components/sources/cu_zed/src/: lib.rs
