[workspace]
members = [
  "components/libs/zed_sdk",
  "components/libs/zed_sdk_sys",
  "components/sources/cu_zed",
]
default-members = ["components/sources/cu_zed"]
resolver = "2"

[workspace.package]
version = "0.15.0"
authors = ["Guillaume Binet <gbin@gootz.net>"]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]
homepage = "https://github.com/copper-project"
repository = "https://github.com/copper-project/zed"

[workspace.dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu29-logviz = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-sensor-payloads = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-transform = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }

bincode = { package = "cu-bincode", version = "2.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }

bytemuck = "1.23.0"
cc = "1.2"
eframe = "0.33"
rerun = { version = "0.31", default-features = false, features = [
  "sdk",
  "server",
  "log",
] }
